synopsis: "dfuzz: Linear Dependent Types for Differential Privacy"
description: """
dFuzz provides a type checker for linear dependent types
"""
opam-version: "2.0"
maintainer: "Emilio J. Gallego Arias <e@x80.org>"
authors: "Arthur Azevedo de Amorim, Emilio J. Gallego Arias, Marco Gaboardi, Justin Hsu"
homepage: "https://github.com/ejgallego/dfuzz"
bug-reports: "https://github.com/ejgallego/dfuzz/issues"
dev-repo: "git+https://github.com/ejgallego/dfuzz.git"
license: "MIT"

depends: [
  "ocaml"                { >= "4.07.1"   }
  "dune"                 { >= "2.1.3"    }
  "menhir"               { >= "20181113" }
  "why3"                 {  = "1.2.1"    }
  "alt-ergo"             {  = "2.3.0"    }
]

build: [ [ "dune" "build" "-p" name "-j" jobs ] ]
